[package]
name = "sampler"
version = "0.1.0"
authors = ["JT <mccronejt@gmaill.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
clap-verbosity-flag = "0.3.1"
csv = "1.1"
env_logger = "0.8.2"
log = "0.4.0"
rand = "0.7"
